# phone-number-info

./: .gitignore  Dockerfile  README.md  pyproject.toml
apps/phone_info/: apps.py  models.py
apps/phone_info/controllers/: __init__.py  phone_info.py
apps/phone_info/management/commands/: import_phone_ranges.py  runapscheduler.py
apps/phone_info/migrations/: 0001_initial.py
apps/phone_info/scheduler/: jobs.py
apps/phone_info/services/: phone_range.py
core/: api.py  settings.py  urls.py
data/: text.txt
deployment/: compose.yaml
